# contributors-txt

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  README.md  pylintrc  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release.yml
contributors_txt/: __init__.py  __main__.py  const.py  create_content.py  create_contributor_list.py  extract_comment.py  migration_copyrite.py  normalize.py  update_content.py
tests/: .contributors_aliases.json  expected_pylint_contributors_aliases.json  pylint_contributors_aliases.json  test_create_content.py  test_extract.py  test_get_aliases.py  test_normalize.py
tests/create_content_cases/another_name/: expected.txt  shortlog
tests/create_content_cases/bots_default/: expected.txt  shortlog
tests/create_content_cases/bots_filtered/: expected.txt  flags.json
tests/create_content_cases/single_person/: expected.txt  shortlog
tests/create_content_cases/two_persons_sorted/: expected.txt  shortlog
tests/extract_cases/pylint/: expected.json
tests/get_aliases_cases/legacy_format/: expected.json  flags.json
tests/normalize_cases/legacy_format/: expected.json
